--- a/style/responsividade.css
+++ b/style/responsividade.css
@@ -66,6 +66,7 @@ section{
     flex-direction: column;
     padding-right: 0;
     padding-top: 57px;
+    border-right: 1px;
 }
 
 .begin img{
@@ -123,12 +124,6 @@ section{
     text-align: center;
 }
 /*                             /* End of Cadastro de usuario (Mobile 428px) */
-
-/*                             /* Borda de divisão entre DIVs (Mobile 428px) */
-.borda{
-    opacity: 0;
-}
-/*                            /* End of Borda de Divisão entre DIVs (Mobile 428px) */
 
 /*                           /* Begin of Game (Mobile 428px) */
 .start{
@@ -193,7 +188,6 @@ section{
     border: 3px solid --white;
     border-radius: 20px;
 
-    
     font-family: 'Press Start 2P';
     font-style: normal;
     font-weight: 400;
