--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,7 @@ section{
     display: flex;
     flex-direction: column;
     padding-right: 55px;
+    border-right: 5px solid var(--gray);
 }
 
 .begin img{
@@ -185,7 +186,6 @@ section{
     flex-direction: column;
     align-items: center;
     padding-left: 10px; 
-    border-left: 5px solid var(--gray);
     padding-top: 113px;
 }
 
